Add infrastructure for app - not working

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,22 +1,16 @@
-# To jest konfiguracja serwera Nginx
+# To jest nowa, prostsza konfiguracja Nginx tylko dla Fargate
 server {
   listen 80; # Słuchaj na porcie 80
 
-  # Reguła dla wszystkich zapytań zaczynających się od /api/
-  location /api/ {
-    # 'backend' to nazwa serwisu z pliku docker-compose.yml
-    # '3001' to port, na którym działa backend W KONTENERZE
-    proxy_pass http://backend:3001;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-  }
-
-  # Reguła dla wszystkich INNYCH zapytań (czyli dla naszej apki React)
+  # Reguła dla wszystkich zapytań
   location / {
     root   /usr/share/nginx/html; # Gdzie są pliki Reacta
     index  index.html index.htm;
-    # To jest ważne dla React Routera (i ogólnie SPA):
-    # Jeśli nie znajdzie pliku, zwróć index.html
+    
+    # To jest kluczowe dla Reacta (Single Page Application):
+    # Jeśli ktoś poprosi o /login albo /profil (a plik nie istnieje),
+    # zwróć po prostu główny plik index.html,
+    # a React Router sam zajmie się resztą.
     try_files $uri $uri/ /index.html; 
   }
 }
