--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "3001:3001"
     environment:
       NODE_ENV: production
+      AWS_REGION: ${AWS_REGION}
 
   frontend:
     build: ./frontend
