--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 AWS_ACCOUNT_ID=123456789012
 AWS_REGION=eu-west-2
+
+REACT_APP_AWS_REGION=eu-west-2
+REACT_APP_COGNITO_USER_POOL_ID=eu-west-2_xxxxxxxxx
+REACT_APP_COGNITO_APP_CLIENT_ID=xxxxxxxxxxxxxxxxxxxx
