--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,6 +5,16 @@ LABEL stage="builder"
 
 WORKDIR /app
 
+# --- DODAJ TE LINIE (ODBIÓR ARGUMENTÓW) ---
+ARG REACT_APP_COGNITO_USER_POOL_ID
+ARG REACT_APP_COGNITO_APP_CLIENT_ID
+ARG REACT_APP_AWS_REGION
+
+# --- DODAJ TE LINIE (USTAWIENIE ZMIENNYCH ŚRODOWISKOWYCH) ---
+ENV REACT_APP_COGNITO_USER_POOL_ID=$REACT_APP_COGNITO_USER_POOL_ID
+ENV REACT_APP_COGNITO_APP_CLIENT_ID=$REACT_APP_COGNITO_APP_CLIENT_ID
+ENV REACT_APP_AWS_REGION=$REACT_APP_AWS_REGION
+
 # Kopiujemy pliki manifestu
 COPY package*.json ./
 
