Add backend S3 configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       AWS_REGION: ${AWS_REGION}
       COGNITO_USER_POOL_ID: ${REACT_APP_COGNITO_USER_POOL_ID}
       COGNITO_APP_CLIENT_ID: ${REACT_APP_COGNITO_APP_CLIENT_ID}
+      S3_BUCKET_NAME: ${S3_BUCKET_NAME}
 
   frontend:
     build: 
