--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "aws-amplify": "^5.3.27",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-image-crop": "^11.0.10",
     "react-router-dom": "^7.9.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
